Add accomplishments, projects, and index page content.

--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ body {
   margin: 0 auto;
   padding: 20px;
 }
+.container-vertical {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px;
+  flex-direction: column;
+}
 
 /* Style headings */
 h1,
